--- a/.classpath
+++ b/.classpath
@@ -513,5 +513,10 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/GitHub Projects/1904/OnlinePlayersRating/libs/jsoup-1.15.4.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
